subprojects {
    apply plugin: 'java'

    group = 'org.setms.sew'
    version = '0.1.0'

    repositories {
        mavenCentral()
        maven {
            url = uri('https://repo.languagetool.org/artifactory/languagetool-os-release/')
        }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.named('test') {
        useJUnitPlatform()
    }

}